--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "ext-curl": "*",
+        "graham-campbell/markdown": "^14.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "nesbot/carbon": "^2.64",
+        "vip-soft/tmdb-query": "@dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -61,5 +65,14 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "modules/vip-soft/tmdb-query",
+            "options": {
+                "symlink": true
+            }
+        }
+    ]
 }
